# 2DShooter

./: CMakeLists.txt
headers/: Animation.h  LivingBody.h  Player.h  Transformable.h
scr/: Animation.cpp  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameObject.cpp  GameObject.h  LivingBody.cpp  LivingBody.h  Transformable.cpp  main.cpp
scr/Technical/: Animation.cpp
scr/UI/: Button.cpp  MenuWindow.cpp
